--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Importing fonts from Google Fonts */
+/* @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Satoshi:wght@300;400;500;700&display=swap");
+
+body {
+  font-family: "Satoshi", sans-serif;
+  font-size: 16px;
+  /* color: #333; */
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Satoshi", sans-serif;
+  font-weight: 700;
+  /* color: #222; */
+}
+
+p,
+label {
+  font-family: "Satoshi", sans-serif;
+  font-weight: 400;
+  /* color: #555; */
+}
